--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^5.15.18",
     "@mui/material": "^5.15.18",
     "@mui/material-nextjs": "^5.15.11",
+    "@mui/x-data-grid": "^7.6.1",
     "@reduxjs/toolkit": "^2.2.5",
     "jwt-decode": "^4.0.0",
     "next": "14.0.3",
