--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_BACKEND_URL="https://travel-buddy-back-end.vercel.app/api/v1"
+NEXT_PUBLIC_BACKEND_URL="http://localhost:5000/api/v1"
  
