--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.52.2",
     "react-redux": "^9.1.2",
+    "sharp": "^0.33.4",
     "sonner": "^1.5.0",
     "vercel": "^35.2.3",
     "zod": "^3.23.8"
