--- a/package.json
+++ b/package.json
@@ -20,13 +20,14 @@
     "@reduxjs/toolkit": "^2.2.7",
     "jwt-decode": "^4.0.0",
     "next": "14.2.5",
+    "next-cloudinary": "^6.10.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.2",
     "react-redux": "^9.1.2",
     "sharp": "^0.33.4",
     "sonner": "^1.5.0",
-    "vercel": "^35.2.3",
+    "vercel": "^32.3.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
