--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-# NEXT_PUBLIC_BACKEND_URL=https://travel-buddy-back-end.vercel.app/api/v1
-NEXT_PUBLIC_BACKEND_URL=http://localhost:5000/api/v1
+NEXT_PUBLIC_BACKEND_URL=https://travel-buddy-back-end.vercel.app/api/v1
+# NEXT_PUBLIC_BACKEND_URL=http://localhost:5000/api/v1
 NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=dcf7yhbko
  
