--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@mui/x-date-pickers": "^7.12.1",
     "@reduxjs/toolkit": "^2.2.7",
     "dayjs": "^1.11.12",
+    "html-react-parser": "^5.1.12",
     "jodit-react": "^4.1.2",
     "jwt-decode": "^4.0.0",
     "next": "14.2.5",
